force-app/main/default/objects/Account/fields/Account_Profit__c.field-meta.xml
<CustomField>
    <fullName>Account_Profit__c</fullName>
    <formula>ROIProfitAmount__c  *  Invested_Fund__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>