force-app/main/default/objects/Account/fields/Account_ROI__c.field-meta.xml
<CustomField>
    <fullName>Account_ROI__c</fullName>
    <formula>( Account_Profit__c /  TotalInvestedFee__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ROI %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>