force-app/main/default/objects/Account/fields/AccountROI__c.field-meta.xml
<CustomField>
    <fullName>AccountROI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account ROI</label>
    <referenceTo>Account_ROI__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>