force-app/main/default/objects/Account/fields/Accuracy_Score__c.field-meta.xml
<CustomField>
    <fullName>Accuracy_Score__c</fullName>
    <inlineHelpText>%age of accuracy score based of different criteria</inlineHelpText>
    <label>Accuracy Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>