force-app/main/default/objects/Account/fields/BusinessCardPhoto__c.field-meta.xml
<CustomField>
    <fullName>BusinessCardPhoto__c</fullName>
    <inlineHelpText>This field is a mapped field with Lead and will be automatically filled during Lead conversion process if the data is filled there. Fields values will be updated based on the mapped objects (Lead-Account) (Lead-Contact)</inlineHelpText>
    <label>Business Card Photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>