force-app/main/default/objects/Account/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Enter other details of source if required</description>
    <inlineHelpText>Enter other details of source if required</inlineHelpText>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>