force-app/main/default/objects/Account/fields/DescribeResearch__c.field-meta.xml
<CustomField>
    <fullName>DescribeResearch__c</fullName>
    <label>Describe Research</label>
    <length>255</length>
    <type>Text</type>
</CustomField>