force-app/main/default/objects/Account/fields/GrossProfit__c.field-meta.xml
<CustomField>
    <fullName>GrossProfit__c</fullName>
    <formula>TotalInvestmentAfterFee__c  +  Account_Profit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a Formula field which gives Gross profit on the account calculated as :- Investment after fee + total of Profit after fee from Account ROI</inlineHelpText>
    <label>Gross Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>