force-app/main/default/objects/Account/fields/IndustryTheyInvestIn__c.field-meta.xml
<CustomField>
    <fullName>IndustryTheyInvestIn__c</fullName>
    <label>Industry They Invest In</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>