force-app/main/default/objects/Account/fields/Invested_Fund__c.field-meta.xml
<CustomField>
    <fullName>Invested_Fund__c</fullName>
    <label>Invested Fund %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>