force-app/main/default/objects/Account/fields/InvestmentAmount__c.field-meta.xml
<CustomField>
    <fullName>InvestmentAmount__c</fullName>
    <inlineHelpText>Enter the amount that has been invested by this Account</inlineHelpText>
    <label>Investment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>