force-app/main/default/objects/Account/fields/NewsMedia__c.field-meta.xml
<CustomField>
    <fullName>NewsMedia__c</fullName>
    <description>details of the account is captured from external sources (Media)</description>
    <inlineHelpText>hello testing - need the news media publication URL link from which this information has been derived.</inlineHelpText>
    <label>News Media</label>
    <type>Url</type>
</CustomField>