force-app/main/default/objects/Account/fields/PresentVal__c.field-meta.xml
<CustomField>
    <fullName>PresentVal__c</fullName>
    <formula>PVIRec__c -  TotalFeeAcc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Present Value of Investment After Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>