force-app/main/default/objects/Account/fields/PVIRec__c.field-meta.xml
<CustomField>
    <fullName>PVIRec__c</fullName>
    <label>Present Value of Investment</label>
    <summarizedField>InvestmentRecord__c.TPVal__c</summarizedField>
    <summaryForeignKey>InvestmentRecord__c.Acc__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>