force-app/main/default/objects/Account/fields/Regulatory_Body_Name__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Body_Name__c</fullName>
    <inlineHelpText>Name of the Regulatory Body associated with this Account</inlineHelpText>
    <label>Regulatory Body Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>