force-app/main/default/objects/Account/fields/ROI__c.field-meta.xml
<CustomField>
    <fullName>ROI__c</fullName>
    <inlineHelpText>Return of Investment % of the fund.</inlineHelpText>
    <label>ROI %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>