force-app/main/default/objects/Account/fields/ROIProfitAmount__c.field-meta.xml
<CustomField>
    <fullName>ROIProfitAmount__c</fullName>
    <inlineHelpText>Profit Amount of the fund.</inlineHelpText>
    <label>ROI Profit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>