force-app/main/default/objects/Account/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <inlineHelpText>Sub type of the account</inlineHelpText>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Venture capital</fullName>
            </value>
            <value>
                <fullName>Private equity</fullName>
            </value>
            <value>
                <fullName>Fund of funds</fullName>
            </value>
            <value>
                <fullName>Hedge Funds</fullName>
            </value>
            <value>
                <fullName>Tech</fullName>
            </value>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>Blockchain</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>System integrator</fullName>
            </value>
            <value>
                <fullName>News papers</fullName>
            </value>
            <value>
                <fullName>Magazines</fullName>
            </value>
            <value>
                <fullName>Blogs</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Neighborhood</fullName>
            </value>
            <value>
                <fullName>Specialty</fullName>
            </value>
            <value>
                <fullName>Potential</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Non-Technical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>