force-app/main/default/objects/Account/fields/Total_Invested_Fund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Invested_Fund_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Invested Fund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>