force-app/main/default/objects/Account/fields/TotalFeeAcc__c.field-meta.xml
<CustomField>
    <fullName>TotalFeeAcc__c</fullName>
    <inlineHelpText>Sum of Total amount of Fee that has been paid on the Account</inlineHelpText>
    <label>Total Fee(Account)</label>
    <summarizedField>InvestmentRecord__c.TotalFeeAmt__c</summarizedField>
    <summaryForeignKey>InvestmentRecord__c.Acc__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>