force-app/main/default/objects/Account/fields/TotalInvestedAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalInvestedAmount__c</fullName>
    <label>Total Invested Amount</label>
    <summarizedField>InvestmentRecord__c.IA__c</summarizedField>
    <summaryForeignKey>InvestmentRecord__c.Acc__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>