force-app/main/default/objects/Account/fields/TotalInvestedFee__c.field-meta.xml
<CustomField>
    <fullName>TotalInvestedFee__c</fullName>
    <formula>TotalInvestedAmount__c -  TotalFeeAcc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Invested Amount(After Fee)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>