force-app/main/default/objects/Account/fields/TotalInvestmentAfterFee__c.field-meta.xml
<CustomField>
    <fullName>TotalInvestmentAfterFee__c</fullName>
    <formula>InvestmentAmount__c -  TotalFeeAcc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a formula field and will be updated with the total investment done after paying the Fee</inlineHelpText>
    <label>Total Investment After Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>