force-app/main/default/objects/Account/fields/WXIntegration__Wealth_X_DossierDocumentId__c.field-meta.xml
<CustomField>
    <fullName>WXIntegration__Wealth_X_DossierDocumentId__c</fullName>
    <inlineHelpText>This field will auto populate based on Wealth-X Data integration</inlineHelpText>
    <label>Wealth-X DossierDocumentId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>