force-app/main/default/objects/Account/fields/WXIntegration__Wealth_X_Entity__c.field-meta.xml
<CustomField>
    <fullName>WXIntegration__Wealth_X_Entity__c</fullName>
    <formula>IF (    AND( WXIntegration__Wealth_X_Entity_id__c    &lt;&gt;  0, WXIntegration__Wealth_X_DossierDocumentId__c  &lt;&gt; &apos;&apos;)    ,HYPERLINK(&quot;/&quot; &amp; Id , IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;&amp;WXIntegration__Wealth_X_DossierDocumentId__c, &quot;Entity&quot;,25, 25)),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will auto populate based on Wealth-X Data integration</inlineHelpText>
    <label>Wealth-X Account</label>
    <type>Text</type>
</CustomField>