force-app/main/default/objects/Account/fields/WXIntegration__Wealth_X_Entity_id__c.field-meta.xml
<CustomField>
    <fullName>WXIntegration__Wealth_X_Entity_id__c</fullName>
    <inlineHelpText>This field will auto populate based on Wealth-X Data integration</inlineHelpText>
    <label>Wealth-X Account id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>