force-app/main/default/objects/Account/fields/WXIntegration__Wealth_X_Is_Primary_Dossier__c.field-meta.xml
<CustomField>
    <fullName>WXIntegration__Wealth_X_Is_Primary_Dossier__c</fullName>
    <inlineHelpText>This field will auto populate based on Wealth-X Data integration</inlineHelpText>
    <label>Wealth-X Is Primary Dossier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>