force-app/main/default/objects/Account/recordTypes/Company_Organization.recordType-meta.xml
<RecordType>
    <fullName>Company_Organization</fullName>
    <active>true</active>
    <label>Company(Organization)</label>
</RecordType>