force-app/main/default/objects/Account/recordTypes/Founder_Person_Account.recordType-meta.xml
<RecordType>
    <fullName>Founder_Person_Account</fullName>
    <active>false</active>
    <label>Founder(Person Account)</label>
</RecordType>