force-app/main/default/objects/Account/recordTypes/Fund_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>Fund_Vehicle</fullName>
    <active>false</active>
    <label>Fund Vehicle</label>
</RecordType>