force-app/main/default/objects/Account/recordTypes/IndividualPersonAccount.recordType-meta.xml
<RecordType>
    <fullName>IndividualPersonAccount</fullName>
    <active>true</active>
    <label>Individual(Person Account)</label>
</RecordType>