force-app/main/default/objects/Account/recordTypes/Investment_Company.recordType-meta.xml
<RecordType>
    <fullName>Investment_Company</fullName>
    <active>false</active>
    <label>Investment Company</label>
</RecordType>