force-app/main/default/objects/Account/recordTypes/Regulatory_Body.recordType-meta.xml
<RecordType>
    <fullName>Regulatory_Body</fullName>
    <active>true</active>
    <label>Regulatory Body</label>
</RecordType>