force-app/main/default/objects/Account/recordTypes/Subsdiary.recordType-meta.xml
<RecordType>
    <fullName>Subsdiary</fullName>
    <active>false</active>
    <label>Subsdiary</label>
</RecordType>