force-app/main/default/objects/Account/recordTypes/TalentPool_Person_Account.recordType-meta.xml
<RecordType>
    <fullName>TalentPool_Person_Account</fullName>
    <active>false</active>
    <label>TalentPool(Person Account)</label>
</RecordType>