force-app/main/default/objects/Account/validationRules/InvestmentAmt_less_than_TotalInvtAmt.validationRule-meta.xml
<ValidationRule>
    <fullName>InvestmentAmt_less_than_TotalInvtAmt</fullName>
    <active>true</active>
    <errorConditionFormula>TotalInvestedAmount__c &gt; InvestmentAmount__c</errorConditionFormula>
    <errorMessage>The investment amount on Investment Record should not exceed the Investment Amount on the Account</errorMessage>
</ValidationRule>